changed text on home page

--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@ ul.task-list li input[type="checkbox"] {
 </div>
   </div>
   <div class="about-contents"><main class="content" id="quarto-document-content">
-<p>Finley Malloc majors in Data Analytics at SUNY Geneseo. When not working on data analytics, Finley enjoys spending time unicycling and playing with her pet iguana.</p>
+<p>Brendan Style majors in Data Analytics at SUNY Geneseo. While at school, Brendan also spends his time competing as a member of the Geneseo Track and Field Team.</p>
 <section id="education" class="level2">
 <h2 data-anchor-id="education">Education</h2>
-<p>State University of New York at Geneseo | Geneseo, NY <br> B.S. in Data Analytics | Aug 2022 - May 2026 <br> Minor in Economics</p>
+<p>State University of New York at Geneseo | Geneseo, NY <br> B.S. in Data Analytics | Aug 2021 - May 2025 <br></p>
 </section>
 <section id="experience" class="level2">
 <h2 data-anchor-id="experience">Experience</h2>
