--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Brendan Style’s Blog – YOUR NAME</title>
+<title>Brendan Style</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -79,7 +79,7 @@ ul.task-list li input[type="checkbox"] {
       <div class="navbar-container container-fluid">
       <div class="navbar-brand-container mx-auto">
     <a class="navbar-brand" href="./index.html">
-    <span class="navbar-title">YOUR NAME</span>
+    <span class="navbar-title">Brendan Style</span>
     </a>
   </div>
             <div id="quarto-search" class="" title="Search"></div>
@@ -92,6 +92,25 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link" href="./blog-listing.html"> 
 <span class="menu-text">Blog</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./danl_proj_nba.html"> 
+<span class="menu-text">Project</span></a>
+  </li>  
+  <li class="nav-item dropdown ">
+    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-python-data-analysis" role="link" data-bs-toggle="dropdown" aria-expanded="false">
+ <span class="menu-text">Python Data Analysis</span>
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="nav-menu-python-data-analysis">    
+        <li>
+    <a class="dropdown-item" href="./pandas_basics.html">
+ <span class="dropdown-text">Pandas Basics</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./seaborn_basics.html">
+ <span class="dropdown-text">Seaborn Basics</span></a>
+  </li>  
+    </ul>
+  </li>
 </ul>
           </div> <!-- /navcollapse -->
             <div class="quarto-navbar-tools">
@@ -108,17 +127,17 @@ ul.task-list li input[type="checkbox"] {
 <!-- main -->
 <div class="quarto-about-trestles">
   <div class="about-entity">
-    <img src="img/profile.png" class="about-image
-  rounded " style="width: 16em;">
+    <img src="img/just_face_headshot.png" class="about-image
+  rounded " style="width: 20em;">
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Brendan Style’s Blog</h1>
+<h1 class="title">Brendan Style</h1>
 </div>
 <div class="quarto-title-meta">
   </div>
 </header>
     <div class="about-links">
-  <a href="https://linkedin.com" class="about-link" rel="" target="">
+  <a href="https://www.linkedin.com/in/brendan-style-2139ab260/" class="about-link" rel="" target="">
     <i class="bi bi-linkedin"></i>
      <span class="about-link-text">LinkedIn</span>
   </a>
@@ -126,15 +145,15 @@ ul.task-list li input[type="checkbox"] {
     <i class="bi bi-instagram"></i>
      <span class="about-link-text">Instagram</span>
   </a>
-  <a href="https://github.com" class="about-link" rel="" target="">
+  <a href="https://github.com/brendan-style" class="about-link" rel="" target="">
     <i class="bi bi-github"></i>
      <span class="about-link-text">GitHub</span>
   </a>
-  <a href="/resume-example.pdf" class="about-link" rel="" target="_blank">
+  <a href="/25_style_resume.pdf" class="about-link" rel="" target="_blank">
     <i class="bi bi-file-earmark-pdf"></i>
      <span class="about-link-text">Resumé</span>
   </a>
-  <a href="mailto:YOUR_EMAIL@geneseo.edu" class="about-link" rel="" target="">
+  <a href="mailto:bjs100@geneseo.edu" class="about-link" rel="" target="">
     <i class="bi bi-mailbox"></i>
      <span class="about-link-text">Email</span>
   </a>
@@ -720,7 +739,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
       &nbsp;
     </div>   
     <div class="nav-footer-center">
-<p>Powered with GitHub, Quarto, and Jupyter Notebook<br>© YOUR NAME, 2025</p>
+<p>Powered with GitHub, Quarto, and Jupyter Notebook<br>© Brendan Style, 2025</p>
 </div>
     <div class="nav-footer-right">
       &nbsp;
