--- a/danl_proj_nba.html
+++ b/danl_proj_nba.html
@@ -134,7 +134,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   </li>  
   <li class="nav-item">
     <a class="nav-link active" href="./danl_proj_nba.html" aria-current="page"> 
-<span class="menu-text">Project</span></a>
+<span class="menu-text">GREAT Day Projects</span></a>
   </li>  
   <li class="nav-item dropdown ">
     <a class="nav-link dropdown-toggle" href="#" id="nav-menu-python-data-analysis" role="link" data-bs-toggle="dropdown" aria-expanded="false">
