--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">Blog</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./danl_proj_nba.html"> 
-<span class="menu-text">Project</span></a>
+    <a class="nav-link" href="./great_day.html"> 
+<span class="menu-text">GREAT Day Projects</span></a>
   </li>  
   <li class="nav-item dropdown ">
     <a class="nav-link dropdown-toggle" href="#" id="nav-menu-python-data-analysis" role="link" data-bs-toggle="dropdown" aria-expanded="false">
@@ -167,7 +167,7 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="experience" class="level2">
 <h2 data-anchor-id="experience">Experience</h2>
-<p>Starbucks Analytics | Data Analyst Intern | May 2024 - Aug 2024</p>
+<p>SUNY Geneseo | Data Analytics Tutor | August 2024 - Current</p>
 
 
 </section>
