began blog for GD24

--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>GREAT Day Projects – Brendan Style</title>
+<title>Projects – Brendan Style</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -154,8 +154,8 @@ window.Quarto = {
 <span class="menu-text">Blog</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link active" href="./great_day.html" aria-current="page"> 
-<span class="menu-text">GREAT Day Projects</span></a>
+    <a class="nav-link active" href="./projects.html" aria-current="page"> 
+<span class="menu-text">Projects</span></a>
   </li>  
   <li class="nav-item dropdown ">
     <a class="nav-link dropdown-toggle" href="#" id="nav-menu-python-data-analysis" role="link" data-bs-toggle="dropdown" aria-expanded="false">
@@ -191,7 +191,7 @@ window.Quarto = {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">GREAT Day Projects</h1>
+<h1 class="title">Projects</h1>
 </div>
 
 
@@ -239,22 +239,22 @@ window.Quarto = {
     </div>
 </div>
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-listing-date-sort="1740459600000" data-listing-file-modified-sort="1740510481738" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="16">
+<div class="quarto-post image-right" data-index="0" data-listing-date-sort="1740459600000" data-listing-file-modified-sort="1740543259323" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="40">
 <div class="thumbnail">
-<p><a href="./great_day/post-with-code/index.html" class="no-external"></a></p><a href="./great_day/post-with-code/index.html" class="no-external">
-<p><img loading="lazy" src="./great_day/post-with-code/great_day.jpg" class="thumbnail-image"></p>
-</a><p><a href="./great_day/post-with-code/index.html" class="no-external"></a></p>
+<p><a href="./projects/proj_1/index.html" class="no-external"></a></p><a href="./projects/proj_1/index.html" class="no-external">
+<p><img loading="lazy" src="./projects/proj_1/draft_logo.png" class="thumbnail-image"></p>
+</a><p><a href="./projects/proj_1/index.html" class="no-external"></a></p>
 </div>
 <div class="body">
 <h3 class="no-anchor listing-title">
-<a href="./great_day/post-with-code/index.html" class="no-external">What is GREAT Day?</a>
+<a href="./projects/proj_1/index.html" class="no-external">NFL Draft Trends Analyzed and Visualized</a>
 </h3>
 <div class="listing-subtitle">
-<a href="./great_day/post-with-code/index.html" class="no-external"></a>
+<a href="./projects/proj_1/index.html" class="no-external"></a>
 </div>
 </div>
 <div class="metadata">
-<a href="./great_day/post-with-code/index.html" class="no-external">
+<a href="./projects/proj_1/index.html" class="no-external">
 <div class="listing-date">
 Feb 25, 2025
 </div>
