--- a/projects/proj_1/index.html
+++ b/projects/proj_1/index.html
@@ -9,7 +9,7 @@
 <meta name="author" content="Brendan Style">
 <meta name="dcterms.date" content="2025-02-25">
 
-<title>What is GREAT Day? – Brendan Style</title>
+<title>NFL Draft Trends Analyzed and Visualized – Brendan Style</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -96,8 +96,8 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">Blog</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="../../great_day.html"> 
-<span class="menu-text">GREAT Day Projects</span></a>
+    <a class="nav-link" href="../../projects.html"> 
+<span class="menu-text">Projects</span></a>
   </li>  
   <li class="nav-item dropdown ">
     <a class="nav-link dropdown-toggle" href="#" id="nav-menu-python-data-analysis" role="link" data-bs-toggle="dropdown" aria-expanded="false">
@@ -132,7 +132,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">What is GREAT Day?</h1>
+<h1 class="title">NFL Draft Trends Analyzed and Visualized</h1>
 </div>
 
 
@@ -161,9 +161,13 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>This will be a blog with a short write-up about what GREAT day is all about</p>
+<p>This will be a blog post recapping my findings from my project for Geneseo’s GREAT Day in 2024, as a part of my Data Visualization class</p>
+<section id="goals" class="level2">
+<h2 class="anchored" data-anchor-id="goals">Goals</h2>
+<p>When beginning this project, I had 3 questions I wanted to answer: 1. What impact does</p>
 
 
+</section>
 
 </main> <!-- /main -->
 <script type="text/javascript" src="links.js"></script>
