began blog post

--- a/projects/proj_1/index.html
+++ b/projects/proj_1/index.html
@@ -164,7 +164,16 @@ ul.task-list li input[type="checkbox"] {
 <p>This will be a blog post recapping my findings from my project for Geneseo’s GREAT Day in 2024, as a part of my Data Visualization class</p>
 <section id="goals" class="level2">
 <h2 class="anchored" data-anchor-id="goals">Goals</h2>
-<p>When beginning this project, I had 3 questions I wanted to answer: 1. What impact does</p>
+<p>When beginning this project, I had 3 questions I wanted to answer:</p>
+<ol type="1">
+<li>What impact does drafting have on overall team success?</li>
+<li>What Impact does prior drafting success have on future drafting success?</li>
+<li>How has the shift in NFL playstyle impacted overall draft strategy?</li>
+</ol>
+</section>
+<section id="dataset-acquisitioncleaning" class="level2">
+<h2 class="anchored" data-anchor-id="dataset-acquisitioncleaning">Dataset Acquisition/Cleaning</h2>
+<p>Creation of the dataset was quite simple. Thanks to the draft library from <em>nfl-data-py</em>, I was able to load all NFL draft selections from 1980 onward into a python pandas dataframe.</p>
 
 
 </section>
