--- a/projects.html
+++ b/projects.html
@@ -151,17 +151,17 @@ window.Quarto = {
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
     <a class="nav-link" href="./blog-listing.html"> 
-<span class="menu-text">Blog</span></a>
+<span class="menu-text">Blog(FOR CLASS)</span></a>
   </li>  
   <li class="nav-item">
     <a class="nav-link active" href="./projects.html" aria-current="page"> 
 <span class="menu-text">Projects</span></a>
   </li>  
   <li class="nav-item dropdown ">
-    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-python-data-analysis" role="link" data-bs-toggle="dropdown" aria-expanded="false">
- <span class="menu-text">Python Data Analysis</span>
+    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-python-data-analysis(for-class" role="link" data-bs-toggle="dropdown" aria-expanded="false">
+ <span class="menu-text">Python Data Analysis(FOR CLASS)</span>
     </a>
-    <ul class="dropdown-menu" aria-labelledby="nav-menu-python-data-analysis">    
+    <ul class="dropdown-menu" aria-labelledby="nav-menu-python-data-analysis(for-class">    
         <li>
     <a class="dropdown-item" href="./pandas_basics.html">
  <span class="dropdown-text">Pandas Basics</span></a>
@@ -239,7 +239,7 @@ window.Quarto = {
     </div>
 </div>
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-listing-date-sort="1740459600000" data-listing-file-modified-sort="1741578128928" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="6" data-listing-word-count-sort="1088">
+<div class="quarto-post image-right" data-index="0" data-listing-date-sort="1740459600000" data-listing-file-modified-sort="1741629409756" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8" data-listing-word-count-sort="1593">
 <div class="thumbnail">
 <p><a href="./projects/proj_1/index.html" class="no-external"></a></p><a href="./projects/proj_1/index.html" class="no-external">
 <p><img loading="lazy" src="./projects/proj_1/draft_logo.png" class="thumbnail-image"></p>
