Final Project Writeup

--- a/projects.html
+++ b/projects.html
@@ -185,7 +185,7 @@ window.Quarto = {
 <!-- sidebar -->
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(2)</span></div></div></div>
 <!-- main -->
 <main class="content column-page-left" id="quarto-document-content">
 
@@ -239,7 +239,32 @@ window.Quarto = {
     </div>
 </div>
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-listing-date-sort="1740459600000" data-listing-file-modified-sort="1741629409756" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8" data-listing-word-count-sort="1593">
+<div class="quarto-post image-right" data-index="0" data-listing-date-sort="1745208000000" data-listing-file-modified-sort="1747575137421" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="21" data-listing-word-count-sort="4001">
+<div class="thumbnail">
+<p><a href="./projects/320_final/index.html" class="no-external"></a></p><a href="./projects/320_final/index.html" class="no-external">
+<p><img loading="lazy" src="./projects/320_final/title_card.webp" class="thumbnail-image"></p>
+</a><p><a href="./projects/320_final/index.html" class="no-external"></a></p>
+</div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="./projects/320_final/index.html" class="no-external">Prediciting Home Runs in MLB</a>
+</h3>
+<div class="listing-subtitle">
+<a href="./projects/320_final/index.html" class="no-external"></a>
+</div>
+</div>
+<div class="metadata">
+<a href="./projects/320_final/index.html" class="no-external">
+<div class="listing-date">
+Apr 21, 2025
+</div>
+<div class="listing-author">
+Brendan Style
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-listing-date-sort="1740459600000" data-listing-file-modified-sort="1741820812943" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="12" data-listing-word-count-sort="2306">
 <div class="thumbnail">
 <p><a href="./projects/proj_1/index.html" class="no-external"></a></p><a href="./projects/proj_1/index.html" class="no-external">
 <p><img loading="lazy" src="./projects/proj_1/draft_logo.png" class="thumbnail-image"></p>
@@ -247,7 +272,7 @@ window.Quarto = {
 </div>
 <div class="body">
 <h3 class="no-anchor listing-title">
-<a href="./projects/proj_1/index.html" class="no-external">NFL Draft Trends Analyzed and Visualized(Work In Progress)</a>
+<a href="./projects/proj_1/index.html" class="no-external">NFL Draft Trends Analyzed and Visualized</a>
 </h3>
 <div class="listing-subtitle">
 <a href="./projects/proj_1/index.html" class="no-external"></a>
